added links to webpage

--- a/main_page.html
+++ b/main_page.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>My Homepage</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
     <body>
-        <h1>Hello World!</h1>
+        <div class="top_page">
+            <h1>Hector Alonzo-Torres</h1>
+            <p>
+                <a href="https://github.com/Alonso650" target="_blank">
+                    <i class="fa-brands fa-github fa-4x" alt="github"></i>
+                </a>
+            </p>
+            <p>
+                <a href="https://www.linkedin.com/in/hector-alonzo-torres/" target="_blank">
+                    <i class="fa-brands fa-linkedin fa-4x" alt="linkedin"></i>
+                </a>
+            </p>
+        </div>
+        <div class="bio_section">
+            <p> Hello! Welcome to my webpage! My name is Hector Alonzo-Torres
+                and I graduated from Sonoma State University with a Bachelors Degree
+                in Computer Science in December 2019. During my time at Sonoma State
+                
+            </p>
+        </div>
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/2d3b5c06db.js" crossorigin="anonymous"></script>
     </body>
 </html>
