updated bio section

--- a/main_page.html
+++ b/main_page.html
@@ -21,10 +21,14 @@
             </p>
         </div>
         <div class="bio_section">
-            <p> Hello! Welcome to my webpage! My name is Hector Alonzo-Torres
-                and I graduated from Sonoma State University with a Bachelors Degree
-                in Computer Science in December 2019. During my time at Sonoma State
-                
+            <p> Hi there! I'm Hector Alonzo-Torres, a computer science graduate from Sonoma
+                State University. With experience in Python, C++, JavaScript, Java, MySQL, and
+                HTML/CSS, I'm passionate about exploring new technologies and building innovative
+                solutions. Since graduating, I've been honing my skills through personal projects.
+                I'm always looking for new challenges and opportunities to collaborate with others. Some
+                of my hobbies that I enjoy in my freetime are playing video games and watching horror films. Feel
+                free to reach out and learn more about my work! P.S if you scroll to the bottom of my page you 
+                can meet my cat Ripley! 
             </p>
         </div>
         
