--- a/main_page.html
+++ b/main_page.html
@@ -1,39 +1,82 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>My Homepage</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div class="top_page">
-            <h1>Hector Alonzo-Torres</h1>
-            <p>
-                <a href="https://github.com/Alonso650" target="_blank">
-                    <i class="fa-brands fa-github fa-4x" alt="github"></i>
-                </a>
-            </p>
-            <p>
-                <a href="https://www.linkedin.com/in/hector-alonzo-torres/" target="_blank">
-                    <i class="fa-brands fa-linkedin fa-4x" alt="linkedin"></i>
-                </a>
-            </p>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>My Homepage</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <h1 class="navbar-brand" href="#">Hector Alonzo-Torres</h1>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">About Moi</a>
+                    <a class="nav-link" href="#">Joke of the Day</a>
+                    <a class="nav-link" href="#">Projects</a>
+                    <a href="https://github.com/Alonso650" class="mx-2" target="_blank">
+                        <i class="fa-brands fa-github fa-2x" alt="github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/hector-alonzo-torres/" class="mx-2" target="_blank">
+                        <i class="fa-brands fa-linkedin fa-2x" alt="linkedin"></i>
+                    </a>
+                    <a href="Resources/HAlonzoTorresResume2_27_23.pdf" class="mx-2" target="_blank">
+                        <i class="fa-solid fa-file fa-2x"></i>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="bio_section">
-            <p> Hi there! I'm Hector Alonzo-Torres, a computer science graduate from Sonoma
-                State University. With experience in Python, C++, JavaScript, Java, MySQL, and
-                HTML/CSS, I'm passionate about exploring new technologies and building innovative
-                solutions. Since graduating, I've been honing my skills through personal projects.
-                I'm always looking for new challenges and opportunities to collaborate with others. Some
-                of my hobbies that I enjoy in my freetime are playing video games and watching horror films. Feel
-                free to reach out and learn more about my work! P.S if you scroll to the bottom of my page you 
-                can meet my cat Ripley! 
-            </p>
+    </nav>
+    <div class="container-fluid" id="bio_section">
+        <div class="row mt-3">
+            <div class="col-md-4">
+                <div id="profile_pic">
+                    <!-- Profile pic right here-->
+                    <p>PICTURE WAHHH</p>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div id="about_me_section" class="float-md-end">
+                    <h3>About Me</h3>
+                    <p> Hi there! I'm Hector Alonzo-Torres, a computer science graduate from Sonoma
+                        State University. With experience in Python, C++, JavaScript, Java, MySQL, and
+                        HTML/CSS, I'm passionate about exploring new technologies and building innovative
+                        solutions. Since graduating, I've been honing my skills through personal projects.
+                        I'm always looking for new challenges and opportunities to collaborate with others. Some
+                        of my hobbies that I enjoy in my freetime are playing video games and watching horror films. Feel
+                        free to reach out and learn more about my work! P.S if you scroll to the bottom of my page you
+                        can meet my cat Ripley!
+                    </p>
+                </div>
+            </div>
+
         </div>
         
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/2d3b5c06db.js" crossorigin="anonymous"></script>
-    </body>
+        
+    </div>
+    <div class="joke_section">
+        <h1>COMING SOON!</h1>
+    </div>
+    <div class="projects_section">
+        <h1>PROJECTS</h1>
+    </div>
+    <div class="email_submit_form">
+        <h1>EMAIL SUBMIT FORM TO REACH OUT TO MOII</h1>
+    </div>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2d3b5c06db.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
